--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This template for all project node express",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/app.ts",
+    "dev": "nodemon src/app.ts",
+    "start": "node src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
