--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.5.9",
     "typescript": "^5.2.2"
   }
